Resolved scrolling issue on mobile browser

--- a/portfolio_next/styles/globals.css
+++ b/portfolio_next/styles/globals.css
@@ -10,11 +10,11 @@ body {
 }
 
 body {
-	@apply bg-slate-950 text-white min-h-[100vh] relative;
+	@apply bg-slate-950 text-white relative;
 }
 
 #__next {
-	@apply h-full
+	@apply h-full;
 }
 
 a {
